XPense History list and add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="dashboard_fragment_title">XPense Dashboard</string>
     <string name="add_source_fragment_title">Add XPense Source</string>
     <string name="manage_source_fragment_title">Manage XPense Source</string>
+    <string name="add_history_fragment_title">Add XPense History</string>
 
     <!-- Dashboard page -->
     <string name="dashboard_chart_label">Chart</string>
@@ -22,7 +23,13 @@
     <string name="history_empty_message">
         No expense history so far, but should that happened, we will present it here.
     </string>
-    <string name="history_empty_image_description">Money Vault Illustration</string>
+    <string name="history_empty_image_description">Saving Money Illustration</string>
+    <string name="history_type_icon_description">Expense Type Icon</string>
+    <string name="history_amount_input_hint">Amount</string>
+    <string name="history_source_selection_hint">Source</string>
+    <string name="history_type_selection_hint">Category</string>
+    <string name="history_remarks_input_hint">Notes</string>
+    <string name="history_date_selection_hint">Date</string>
 
     <string name="save">Save</string>
     <string name="update">Update</string>
@@ -31,13 +38,12 @@
     <string name="add_new">Add New</string>
     <string name="data_added">Data Added</string>
 
-    <string-array name="expense_types">
-        <item>Personal</item>
-        <item>Business</item>
-        <item>Grocery</item>
-        <item>Daily Needs</item>
-        <item>Other</item>
-    </string-array>
+    <string name="xpense_type_personal">Personal</string>
+    <string name="xpense_type_business">Business</string>
+    <string name="xpense_type_grocery">Grocery</string>
+    <string name="xpense_type_daily">Daily Needs/Regular</string>
+    <string name="xpense_type_debt">Debt</string>
+    <string name="xpense_type_other">Other</string>
 
     <string name="default_expense_source">Wallet</string>
     <string name="default_expense_source_description">Default expense source</string>
